--- a/solution_code/index.html
+++ b/solution_code/index.html
@@ -5,11 +5,13 @@
 	<title>Startup Matchmaker</title>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+
 	<header id="page-header">
-		<div class="wrapper">
+		<div class="container">
 			<h1><a href="index.html">Startup Matchmaker</a></h1>
 			<nav>
 				<ul>
@@ -22,9 +24,14 @@
 			</nav>
 		</div>
 	</header>
-	<p class="tagline">Because two brains <del>taste</del> <ins>are</ins> better than&nbsp;one.</p>
+
+
+	<section class="tagline">Because two brains <del>taste</del> <ins>are</ins> better than one.
+	</section>
+
+
 	<section class="banner">
-		<div class="wrapper">
+		<div class="container">
 			<div class="blurb">
 				<h2>Meet your Match!</h2>
 				<p>Have a great idea for a product, but need help making it a reality? We’re here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
@@ -32,35 +39,34 @@
 			</div>
 		</div>
 	</section>
-	<div class="wrapper">
-		<section class="touts">
-			<section class="tout">
-				<header>
-					<h3>Create a Profile</h3>
-				</header>
-				<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
+
+
+
+	<section class="container clearfix">
+		<div class="search">
+			<h3>Create a Profile</h3>
+			<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
 				<a class="button" href="#">Sign Up Now</a>
-			</section>
-			<section class="tout">
-				<header>
-					<h3>Find a Developer</h3>
-				</header>
-				<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
-				<a class="button" href="developers.html">Start Your Search</a>
-			</section>
-			<section class="tout">
-				<header>
-					<h3>Find a Designer</h3>
-				</header>
-				<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
-				<a class="button" href="designers.html">Start Your Search</a>
-			</section>
-		</section>
-	</div>
+		</div>
+		<div class="search">
+			<h3>Find a Developer</h3>
+			<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
+			<a class="button" href="developers.html">Start Your Search</a>
+		</div>
+		<div class="search">
+			<h3>Find a Designer</h3>
+			<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
+			<a class="button" href="designers.html">Start Your Search</a>
+		</div>
+	</section>
+
+
 	<footer>
-		<div class="wrapper">
+		<div class="container">
 			© 2013 Startup Matchmaker. Made in NY.
 		</div>
 	</footer>
+
+
 </body>
 </html>
